--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ img.pin13 {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 85%;
-    height: 85%;
+    /* height: 85%; */
     background: #fffcdb;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
@@ -192,7 +192,7 @@ img.pin13 {
 .popup-content {
     position: relative;
     flex: 1; /* Take up all available space */
-    padding: 20px;
+    padding: 1.25rem;
     text-align: center;
     overflow: auto;
 }
@@ -212,4 +212,22 @@ img.pin13 {
 
 .popup .close-btn:hover {
     color: #ff0000;
+}
+
+.popup_page {
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+}
+
+img.popup_image {
+    width: 50%;
+    height: 50%;
+    justify-content: center;
+    align-content: center;
+    vertical-align: middle;
+}
+
+div.popup_text {
+    width: 50%;
 }
